fix: use margin instead of padding for spacing in header
Close #1289

--- a/assets/css/_partial/_header.scss
+++ b/assets/css/_partial/_header.scss
@@ -4,22 +4,6 @@ header {
   background-color: $header-background-color;
   @include transition(box-shadow 0.3s ease);
 
-  .logo {
-    display: inline-block;
-    min-height: 1.5em;
-    height: 1.5em;
-    vertical-align: text-bottom;
-  }
-
-  .logo,
-  .header-title-pre {
-    padding-right: 0.25rem;
-  }
-
-  .header-title-post {
-    padding-left: 0.25rem;
-  }
-
   &:hover {
     @include box-shadow(0 0 1.5rem 0 rgba(0, 0, 0, 0.1));
   }
